fix unnecessary 1-hour shift

--- a/app/styles/_offsets.scss
+++ b/app/styles/_offsets.scss
@@ -1,151 +1,151 @@
 .o-720 {
-  transform: translateX(calc(720px - 60px));
+  transform: translateX(720px);
 }
 
 .o-660 {
-  transform: translateX(calc(660px - 60px));
+  transform: translateX(660px);
 }
 
 .o-600 {
-  transform: translateX(calc(600px - 60px));
+  transform: translateX(600px);
 }
 
 .o-570 {
-  transform: translateX(calc(570px - 60px));
+  transform: translateX(570px);
 }
 
 .o-540 {
-  transform: translateX(calc(540px - 60px));
+  transform: translateX(540px);
 }
 
 .o-480 {
-  transform: translateX(calc(480px - 60px));
+  transform: translateX(480px);
 }
 
 .o-420 {
-  transform: translateX(calc(420px - 60px));
+  transform: translateX(420px);
 }
 
 .o-360 {
-  transform: translateX(calc(360px - 60px));
+  transform: translateX(360px);
 }
 
 .o-300 {
-  transform: translateX(calc(300px - 60px));
+  transform: translateX(300px);
 }
 
 .o-240 {
-  transform: translateX(calc(240px - 60px));
+  transform: translateX(240px);
 }
 
 .o-210 {
-  transform: translateX(calc(210px - 60px));
+  transform: translateX(210px);
 }
 
 .o-180 {
-  transform: translateX(calc(180px - 60px));
+  transform: translateX(180px);
 }
 
 .o-120 {
-  transform: translateX(calc(120px - 60px));
+  transform: translateX(120px);
 }
 
 .o-60 {
-  transform: translateX(calc(60px - 60px));
+  transform: translateX(60px);
 }
 
 .o0 {
-  transform: translateX(calc(0px - 60px));
+  transform: translateX(0px);
 }
 
 .o60 {
-  transform: translateX(calc(-60px - 60px));
+  transform: translateX(-60px);
 }
 
 .o120 {
-  transform: translateX(calc(-120px - 60px));
+  transform: translateX(-120px);
 }
 
 .o180 {
-  transform: translateX(calc(-180px - 60px));
+  transform: translateX(-180px);
 }
 
 .o210 {
-  transform: translateX(calc(-210px - 60px));
+  transform: translateX(-210px);
 }
 
 .o240 {
-  transform: translateX(calc(-240px - 60px));
+  transform: translateX(-240px);
 }
 
 .o270 {
-  transform: translateX(calc(-270px - 60px));
+  transform: translateX(-270px);
 }
 
 .o300 {
-  transform: translateX(calc(-300px - 60px));
+  transform: translateX(-300px);
 }
 
 .o330 {
-  transform: translateX(calc(-330px - 60px));
+  transform: translateX(-330px);
 }
 
 .o360 {
-  transform: translateX(calc(-360px - 60px));
+  transform: translateX(-360px);
 }
 
 .o390 {
-  transform: translateX(calc(-390px - 60px));
+  transform: translateX(-390px);
 }
 
 .o420 {
-  transform: translateX(calc(-420px - 60px));
+  transform: translateX(-420px);
 }
 
 .o480 {
-  transform: translateX(calc(-480px - 60px));
+  transform: translateX(-480px);
 }
 
 .o510 {
-  transform: translateX(calc(-510px - 60px));
+  transform: translateX(-510px);
 }
 
 .o525 {
-  transform: translateX(calc(-525px - 60px));
+  transform: translateX(-525px);
 }
 
 .o540 {
-  transform: translateX(calc(-540px - 60px));
+  transform: translateX(-540px);
 }
 
 .o570 {
-  transform: translateX(calc(-570px - 60px));
+  transform: translateX(-570px);
 }
 
 .o600 {
-  transform: translateX(calc(-600px - 60px));
+  transform: translateX(-600px);
 }
 
 .o630 {
-  transform: translateX(calc(-630px - 60px));
+  transform: translateX(-630px);
 }
 
 .o660 {
-  transform: translateX(calc(-660px - 60px));
+  transform: translateX(-660px);
 }
 
 .o720 {
-  transform: translateX(calc(-720px - 60px));
+  transform: translateX(-720px);
 }
 
 .o765 {
-  transform: translateX(calc(-765px - 60px));
+  transform: translateX(-765px);
 }
 
 .o780 {
-  transform: translateX(calc(-780px - 60px));
+  transform: translateX(-780px);
 }
 
 .o840 {
-  transform: translateX(calc(-840px - 60px));
+  transform: translateX(-840px);
 }
